--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "''",
   "scripts": {
     "test": "''",
-    "build": "rm -rf vmlaya && tsc -p `pwd`",
-    "publish": "npm run build && cp package.json ./vmlaya && npm publish vmlaya"
+    "build": "rm -rf vmlaya && tsc -p .",
+    "pub": "npm run build && cp package.json ./vmlaya && npm publish vmlaya"
   },
   "repository": {
     "type": "git",
